# Beacon-DIY

./: .gitignore  README.md
.github/workflows/: release.yml
components/beacon_device/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/beacon_device/beaconConnection/: IBeaconConnection.hpp  TcpMqttBeaconConnection.hpp
components/beacon_device/config/: DeviceProfile.hpp  NvsSettingsStore.cpp  Settings.hpp
components/beacon_device/consumer/: IConsumer.cpp  IConsumer.hpp  IDisplayConsumer.hpp  ILutConsumer.hpp  SimpleRGBConsumer.hpp  WS2812Consumer.hpp
components/beacon_device/consumer/display/: Hub75LvglDisplayConsumer.cpp  Hub75LvglDisplayConsumer.hpp  ILvglDisplayConsumer.cpp  ILvglDisplayConsumer.hpp  Ili9341LvglDisplayConsumer.cpp  Ili9341LvglDisplayConsumer.hpp
components/beacon_device/mapper/: FixedTallyColorMapper.hpp  ITallyColorMapper.hpp
components/beacon_device/orchestrator/: SateliteOrchestrator.cpp  SateliteOrchestrator.hpp
components/beacon_device/orchestrator/handlers/alert/: TallyHandler.hpp
components/beacon_device/orchestrator/handlers/colorPatternMap/: DefaultColorAlertPatternMap.cpp  DefaultColorAlertPatternMap.hpp  IColorAlertPatternMap.hpp
components/beacon_device/types/: AlertTypes.hpp  ColorTypes.hpp  TallyTypes.hpp  TextTypes.hpp
satelites/CYD/CYD-Satelite/: CMakeLists.txt  sdkconfig.defaults
satelites/CYD/CYD-Satelite/main/: CMakeLists.txt  beacon_app.cpp  beacon_app.h  config.cpp  config.h  idf_component.yml  interfaces.h  led_controller.cpp  led_controller.h  main.c  main.cpp  mqtt_manager.cpp  mqtt_manager.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
satelites/CYD/CYD-Satelite/main/beaconConnection/: IBeaconConnection.hpp  TcpMqttBeaconConnection.hpp
satelites/CYD/CYD-Satelite/main/config/: Config.cpp  Config.hpp  DeviceProfile.hpp  NvsSettingsStore.cpp  Settings.hpp
satelites/CYD/CYD-Satelite/main/consumer/: CYDDisplayConsumer.cpp  CYDDisplayConsumer.hpp  IConsumer.hpp  IDisplayConsumer.hpp  SimpleRGBConsumer.hpp  WS2812Consumer.hpp
satelites/CYD/CYD-Satelite/main/httpServer/: EspHttpServer.cpp  EspHttpServer.hpp  HttpHandlers.cpp  HttpHandlers.hpp
satelites/CYD/CYD-Satelite/main/networkConnection/: IEthernetConnection.hpp  INetworkConnection.hpp  IWifiConnection.hpp  StaWifiConnection.cpp  StaWifiConnection.hpp
satelites/CYD/CYD-Satelite/main/orchestrator/: IOrchestrator.hpp  SateliteOrchestrator.cpp  SateliteOrchestrator.hpp
satelites/CYD/CYD-Satelite/main/types/: TallyTypes.hpp
satelites/CYD/CYD-Satelite/main/ui/: index.html  ui.js
satelites/Huidu/HD-WF2/: sdkconfig.defaults
satelites/Huidu/HD-WF2/main/: CMakeLists.txt  board_config.h  idf_component.yml  main.cpp
satelites/Synapt/Satelite-Pro/: sdkconfig.defaults
satelites/Synapt/Satelite-Pro/main/: idf_component.yml  main.cpp
